Fix a wrong code

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -60961,7 +60961,6 @@ encoder:
 𤫿	odhio
 𠉟	odhj
 鸺	odhm
-𱉜	odhm
 𰂥	odht
 𫛬	odhym
 鵂	odhz	1
@@ -60970,6 +60969,7 @@ encoder:
 付	odi	1
 𢧅	odi
 𨾪	odig
+𱉜	odim
 𬿐	odix
 𩿧	odiz
 𠇱	odj
