--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -15847,13 +15847,13 @@ encoder:
 𰛲	eofm
 𣵲	eofq
 𪇶	eofz
-淮	eog	2
-难	eog	1
-𰜛	eog
+淮	eog	1
+难	eog
 潗	eogd
 𣺦	eoge
 潐	eogf
 𪶔	eogg
+𰜛	eogj
 𣵁	eoha
 𣺢	eohd
 㳝	eohg
