--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -83100,7 +83100,6 @@ encoder:
 荸	tjbd
 䕓	tjbf	1
 𦵫	tjbf
-𩍫	tjbge
 𩋙	tjbgr
 𦭄	tjbh
 𩍇	tjbhf
@@ -83108,6 +83107,7 @@ encoder:
 䩵	tjbjj
 萳	tjbl		tjb'l
 𩊟	tjblb
+𩍫	tjble
 靻	tjbm	2
 萓	tjbm	1
 𫊀	tjbm
