--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -77676,6 +77676,7 @@ encoder:
 驔	sfmbj
 驪	sfmbp
 𫘊	sfmcw
+𫧙	sfmd
 䮏	sfmdr
 𩦾	sfmfi
 駍	sfmfj	2
@@ -81025,7 +81026,6 @@ encoder:
 𡱍	syvo
 𡱦	syx
 𪯭	syyj
-𫧙	szmd
 𭟏	szp
 廿	t
 昔	ta	1
