--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -95321,6 +95321,7 @@ encoder:
 𫞓	xhmfp
 𣥍	xhml
 𭭜	xhml
+𭭙	xhn
 𤎵	xhnf
 𣥪	xhnl
 䑕	xhnq
@@ -96241,7 +96242,6 @@ encoder:
 𮍧	xyk
 𫬁	xykr
 𣥌	xym
-𭭙	xyn
 歨	xyo
 㱖	xyoj
 𢢎	xyp
