fix 𨤐: ybhfd->ybbd

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -96445,6 +96445,7 @@ encoder:
 𨖦	ybat
 肻	ybb
 𮌔	ybb
+𨤐	ybbd
 𬩧	ybbd
 𫑌	ybbe
 𰻃	ybbe
@@ -96511,7 +96512,6 @@ encoder:
 稁	ybhd
 𬓟	ybhdn
 𨖿	ybhf
-𨤐	ybhfd	1
 𥹄	ybhfd
 望	ybhg	1
 𨓮	ybhg
