--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -89190,7 +89190,6 @@ encoder:
 𡴋	uwyi
 凹	ux
 𭖇	ux
-𪗔	uxc
 𧰽	uxho
 兕	uxhu	1
 𡸢	uxhu
@@ -95686,6 +95685,7 @@ encoder:
 𪚅	xubwi
 𬺖	xubwi
 𪗤	xuby
+𪗔	xuc
 𪙅	xucie
 齸	xucmt
 𱌜	xucsh
