--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -51499,7 +51499,6 @@ encoder:
 㱹	mnmhx
 𣨂	mnmig
 𭮊	mnmii
-𣧒	mnmlj
 𰙼	mnmmm
 𣧸	mnmmo
 𣧁	mnmms
@@ -51522,6 +51521,7 @@ encoder:
 㼗	mnmun	1
 㼦	mnmun
 𤬳	mnmun
+𣧒	mnmvj
 殌	mnmvm
 甅	mnmwg
 𭮠	mnmwj
@@ -69978,6 +69978,7 @@ encoder:
 技	qje	3
 𫽂	qjeh
 擯	qjfc
+𢯱󠄁	qjfe
 𡉘	qjg
 𠂙	qjh
 𠲱	qjher
