--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -61317,8 +61317,9 @@ encoder:
 𭳾	ogoge
 𤓬	ogogf	1
 𤓪	ogogf
-雦	ogogg	2
-雥	ogogg	1
+雦	ogogg	3
+雥	ogogg	2
+𠓾	ogogg	1
 䨊	ogogl	1
 𩁵	ogogl
 𰕌	ogok
@@ -63106,7 +63107,6 @@ encoder:
 𠋾	omgf
 𪼈	omgg	4
 𨿂	omgg	3
-𠓾	omgg	2
 𠊎	omgg	1
 𠇤	omgi
 𠊷	omgk
@@ -65234,6 +65234,7 @@ encoder:
 𩞒	oslmw
 領	oslmz
 𠛢	osln
+𣢝	oslno
 𭜤	oslp
 𠐼	oslr
 𫩧	oslr
@@ -87593,6 +87594,7 @@ encoder:
 𡹃	ugce
 𰎥	ugcg
 峙	ugdi
+𡉵󠄀	ugg
 𡷅	ugg
 崶	uggi
 嶢	uggu	1
