--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -36873,6 +36873,7 @@ encoder:
 𭧢	jbamo
 𫳕	jbb
 𬻧	jbbm
+𡬙	jbbn
 赍	jbbo
 𭓸	jbbr
 𡬌	jbbu
@@ -39241,7 +39242,6 @@ encoder:
 𡫔	jmsu
 𰌾	jmsx
 𡩅	jmtb
-𡬙	jmtbn
 𫴜	jmth
 𫴐	jmtm
 𡩵	jmto
