Fix a bug with variant selector trailing some chars

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -69978,7 +69978,7 @@ encoder:
 技	qje	3
 𫽂	qjeh
 擯	qjfc
-𢯱󠄁	qjfe
+𢯱	qjfe
 𡉘	qjg
 𠂙	qjh
 𠲱	qjher
@@ -87594,7 +87594,7 @@ encoder:
 𰎥	ugcg
 峙	ugdi
 𡷅	ugg
-𡉵󠄀	ugg
+𡉵	ugg
 崶	uggi
 嶢	uggu	1
 嶤	uggu
