--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -28725,6 +28725,7 @@ encoder:
 䇲	hkt
 𫖿	hktgk
 𩠨	hkthu
+𡴘	hktu
 𪜏	hktu
 𦤯	hktvs
 𦼌	hktwb
@@ -43453,7 +43454,6 @@ encoder:
 𪻁	khttm
 𤣇	khttp
 𤣚	khttu
-𡴘	khtu
 𱮗	khtub
 𤞄	khtvu
 猫	khtw
