--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -38786,8 +38786,6 @@ encoder:
 𬽖	jbdoo
 𪲬	jbdt
 𡨻	jbdu
-𡫺	jbe
-𡬄	jbe
 䪟	jbelm
 𣤳	jbeno
 𣀍	jbeye
@@ -41224,6 +41222,8 @@ encoder:
 𡫔	jmsu
 𰌾	jmsx
 𡩅	jmtb
+𡫺	jmte	1
+𡬄	jmte
 𫴜	jmth
 𫴐	jmtm
 𡩵	jmto
