Fix 𡫺 like chars

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -38754,10 +38754,8 @@ encoder:
 𭧢	jbamo
 𫳕	jbb
 𬻧	jbbm
-𡬙	jbbn
 赍	jbbo
 𭓸	jbbr
-𡬌	jbbu
 賫	jbbuc	2
 賷	jbbuc	1
 䝴	jbbuc
@@ -38789,8 +38787,6 @@ encoder:
 䪟	jbelm
 𣤳	jbeno
 𣀍	jbeye
-𡬍	jbfd
-𡬖	jbff
 𮭈	jbfhz
 𫦎	jbfln
 𰅄	jbfln
@@ -38800,7 +38796,6 @@ encoder:
 𰨵	jbhdn
 𰨵	jbhdu
 寪	jbhf
-𡬊	jbhk
 𢂛	jbhke
 𱤦	jbhld
 𪞱	jbhn
@@ -38845,7 +38840,6 @@ encoder:
 𡚀	jbmek
 𫳲	jbmf
 𰞶	jbmf
-𡬇	jbmf
 𫹦	jbmi
 𫦄	jbmln
 直	jbmm	1
@@ -38859,7 +38853,6 @@ encoder:
 悳	jbmp	2
 惪	jbmp	1
 嗭	jbmp
-𡬑	jbmr
 𢄿	jbmrb
 橐	jbmrd	1
 𣡖	jbmrd
@@ -38874,7 +38867,6 @@ encoder:
 𫴉	jbmz
 孛	jbnd	2
 𢚦	jbndp
-㝱	jbni
 𨙶	jbnl
 𭅥	jbno
 𣠀	jbnod
@@ -38902,8 +38894,6 @@ encoder:
 𧏋	jbrli
 𣡪	jbrrd
 囊	jbrrv
-㝲	jbsb
-𡬓	jbse
 𲈢	jbsie
 𦣰	jbsly
 𭌌	jbthv
@@ -38929,7 +38919,6 @@ encoder:
 直	jbuv	2
 𡩇	jbuv	1
 𰥑	jbuy
-𡫽	jbv
 索	jbvif	1
 𦃦	jbvif
 𮈖	jbvif
@@ -41221,12 +41210,23 @@ encoder:
 翧	jmss
 𡫔	jmsu
 𰌾	jmsx
+㝲	jmtb
 𡩅	jmtb
+𡬍	jmtd
 𡫺	jmte	1
+𡬓	jmte
 𡬄	jmte
+𡬖	jmtf
+𡬇	jmtf
 𫴜	jmth
+𡬊	jmtk
 𫴐	jmtm
+㝱	jmtn	1
+𡬙	jmtn
 𡩵	jmto
+𡬑	jmtr
+𡬌	jmtu
+𡫽	jmtv
 𡧉	jmu
 𪧅	jmu
 𭔌	jmua
