--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -17373,6 +17373,7 @@ encoder:
 𣸃	etic
 𣸃	etid
 瀳	etif
+㳤	eitf
 𣸻	etih
 𣷸	etio
 𣿎	etir	1
@@ -20100,7 +20101,7 @@ encoder:
 㶿	fjbd
 𪹾	fjbf	1
 𤌘	fjbf
-煵	fjbl		fjb'j
+煵	fjbl		fjb'l
 𤊧	fjbm	1
 𤊃	fjbm
 𭶁	fjbp
@@ -23675,7 +23676,7 @@ encoder:
 𡐟	goos
 𧻋	goosl
 䘮	goov
-嗇	goow	1	gow'r
+嗇	goow	1
 𠹫	goow
 𮧌	goow
 𰣋	goow
@@ -29007,7 +29008,7 @@ encoder:
 𪕿	hlhuu
 𱉬	hlhym
 䖝	hli
-禹	hlib		hlb'i
+禹	hlib
 𰪛	hlig
 𫜤	hlik
 州	hlil	1
@@ -33435,7 +33436,7 @@ encoder:
 𮚧	hvslc
 孵	hvsld
 毈	hvsle
-卵	hvsli		hhsl'i
+卵	hvsli		hvsl'i
 𫧿	hvslk
 𠛓	hvsln
 𱑚	hvsln
@@ -38040,12 +38041,15 @@ encoder:
 𢾅	iteok
 𢾖	iteye
 庶	itf	2
+𠦑	itf
 𢉙	itf
 𱝅	itf
 𰊤	itfg
 鷓	itfhz
 䗪	itfi
 𩔼	itfmz
+𥆳	itfu
+𧚛	itfv
 𡊅	itg
 𭙬	itgi
 𭙭	itgm
@@ -38099,7 +38103,6 @@ encoder:
 㢜	itwp
 廉	itxc	1
 㢘	itxf
-𠦑	ityf
 𠦑	ityi
 𧇑	itypn
 𧇑	itypu
@@ -39134,12 +39137,12 @@ encoder:
 𥦥	jchuo
 竁	jchuu
 窌	jchvl
-窗	jchwe
+窗	jchwe		jchw'e
 𫁖	jchwi	1
 𩴱	jchwi
 𱆡	jchwi
-窗	jchwk
-窗	jchwn
+窗	jchwk		jchw'k
+窗	jchwn		jchw'n
 𮄒	jchwn
 窻	jchwp
 窎	jchym
@@ -39621,6 +39624,7 @@ encoder:
 𭓖	jdbms
 䙿	jdbuu
 𡨭	jdci
+𱤜	jdcwa
 㝝	jdd	1
 𣒐	jdd
 𪧲	jdde
@@ -39648,6 +39652,7 @@ encoder:
 𤳡	jdihw
 𣚺	jdihy
 𭓆	jdino
+𱒮	jdir
 𰥡	jdiu
 𲁎	jdiu
 𬂧	jdjd
@@ -41717,7 +41722,7 @@ encoder:
 𰅸	jsmv
 𠎶	jso
 𪧆	jso
-膥	jsobo		dsob'o
+膥	jsobo		jsob'o
 𣘒	jsod
 𠄊	json
 𡨉	jsop
@@ -72383,7 +72388,6 @@ encoder:
 䎥	qdcor
 𮋧	qdcr
 𮋤	qdcsh
-𱤜	qdcwa
 㨆	qdd
 𢵳	qddd
 𢴻	qdde
@@ -72435,7 +72439,6 @@ encoder:
 𦔣	qdihy
 𦔩	qdipf
 耛	qdir
-𱒮	qdir
 𦔁	qdisi
 𡦳	qdixf	1
 𡦲	qdixf
@@ -73432,6 +73435,7 @@ encoder:
 擴	qitc
 𢱋	qite
 摭	qitf
+𰓹	qitf
 𰓹	qiti
 𱡑	qitr
 𢯪	qitu
@@ -74670,7 +74674,6 @@ encoder:
 志	qp
 𣬛	qp
 𰒷	qp
-𰭧	qp
 指	qpa	2
 耆	qpa	1
 㧦	qpa
@@ -74762,7 +74765,6 @@ encoder:
 䎛	qpr	2
 㖈	qpr	1
 𦒵	qpr
-𮋞	qprjd
 𫅳	qprp
 𪮇	qprr	1
 抱	qpru	2
@@ -75312,6 +75314,7 @@ encoder:
 击	qu	2
 㧄	qu
 𢩳	qu
+𰭧	qu
 𭠼	quau
 𪮤	qubb
 𭠽	qubk
@@ -75359,6 +75362,7 @@ encoder:
 𢭞	quon
 𢹂	quos
 𠓆	quqmu
+𮋞	qurjd
 𲃼	quro
 𨇜	quryo
 𢶮	qusf
@@ -84123,7 +84127,7 @@ encoder:
 𩧹	smwg	1
 𡲙	smwg
 𩧽	smwjr
-骃	smwk		nmw'k
+骃	smwk		smw'k
 𮊷	smwn
 𮊷	smwq
 𩨎	smwtc
