Add 䎉 ssim and 𥠈󠄁 hdail

--- a/cangjie6.dict.yaml
+++ b/cangjie6.dict.yaml
@@ -25675,6 +25675,7 @@ encoder:
 𮃜	hdafu
 𫀴	hdag	1
 𥠀	hdahm
+𥠈󠄁	hdail
 穊	hdaiu
 𠝲	hdaln
 𫀴	hdam	2
@@ -84622,6 +84623,7 @@ encoder:
 𰭡	ssike
 翇	ssikk
 𰭥	ssikm
+䎉	ssim	2
 𦑌	ssim	1
 𡰳	ssim
 𢑶	ssioh
